--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,44 @@
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-*.suo
-*.backup
-*.user
-*.dbmdl
-*.pptx
-*.psess
-*.orig
-*.xml
-*.~vsd
-*.zip
-*.sublime-project
-*.sublime-workspace
-*.exe
-*.avi
-*.mp4
-*.mov
-*.rar
-*.mdf
-*.ldf
-**/nuspec.list
-**/packages/
-**/.sass-cache/
-**/node_modules/
-**/bower_components/
-*/Performance/*TestResults.txt
-**/bin
-**/obj
-**/*.log.1
-**/*.log.*
-*.log
-*.db
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
+nupkg/
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+
+# Rider
+.idea/
+
+# Visual Studio
 .vs/
-Publish/
+
+# Fleet
+.fleet/
+
+# Code Rush
+.cr/
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+msbuild.log
+msbuild.err
+msbuild.wrn
